Some z-index overlapping modals fix

--- a/css/references.css
+++ b/css/references.css
@@ -23,7 +23,6 @@
     width: 300px;
     padding: 0;
     margin-top: -15%;
-    z-index: 10; 
     left: 0;
     position: absolute;
     font-weight: bolder;
